# Proyecto_automatizaciones

./: .gitignore  INDEX_MAESTRO.md  ODS_00.md  README.md  ZAC_INDEX_00.md  main.py  pyproject.toml
data/: bmc_state.json
docs/: ANTIGRAVITY_ZAC_POLICY.md  ARQ_00_sistema_convierte_zac.md  ARQ_00_sistema_proyectoauto.md  ARQ_01_MARCO_RECTOR_REDACCION.md  DECISION_LOG.md  ESTILO_00_guia_tono_y_voz_equipo.md  EXCEPCIONES_ESTILO_Y_CONTENIDO.md  NOTEBOOKLM_OUTPUT_CRITERIA.md  NOTEBOOKLM_PROMPTS_MASTER.md  OPCION_ACTIVA.md  PERFIL_DECISOR.md  PLANTILLA_AUDITORIA_SEMANTICA.md  REGLA_HIGIENE.md
docs_base/: CronogramaConvierteZAC.txt  PROYAUTO_DOC_A_DOSSIER.md  PROYAUTO_DOC_B_REALIDAD_INTERNA.md  documento_b_realidad_interna_y_marco_de_analisis_viabilidad_mercado.md  dossier_ampliado_proyecto_zac_operaciones_inteligentes.md
output/: ECOSISTEMA_LOGISTICO_EUROPEO.md  STATUS_QUO_Y_COMPETENCIA_TRACKPOD.md
reports/: AUDITORIA_REPO_ZAC.md  REPORTE_CIERRE_BLOQUE_1.md  auditoria_semantica_00_analisis_sector_logistico_zaragoza.md  auditoria_semantica_01_mapa_empatia_transporte.md  auditoria_semantica_02_canvas_valor.md  auditoria_semantica_03_pestel.md  auditoria_semantica_04_dafo.md  auditoria_semantica_05_ods_v1.md  auditoria_semantica_06_competencia_y_benchmarking.md  auditoria_semantica_07_estrategia_competitiva.md  auditoria_semantica_08_curva_valor_vs_competencia.md  auditoria_semantica_09_matriz_came.md  auditoria_semantica_10_business_model_canvas.md  auditoria_semantica_99_resumen_bloque_1.md  auditoria_supervisor_global_bloque_1.md  diagnostico_auditores.md  (+4 more)
(+82 files in other folders)
