[project]
name = "proyecto_automatizaciones_logisticas"
version = "0.1.0"
description = "Repositorio maestro para diseñar, validar y estructurar una app de acompañamiento al emprendedor, con core metodológico, casos de prueba sectoriales y trazabilidad arquitectónica."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
